.metadata/.plugins/org.eclipse.cdt.ui/Nixie_firnware.build.log
17:56:58 **** Incremental Build of configuration Debug for project Nixie_firnware ****
make all 
Building file: ../Src/buttons.c
Invoking: MCU GCC Compiler
/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F429xx -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Drivers/CMSIS/Include" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Middlewares/Third_Party/FreeRTOS/Source/include" -I"/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/buttons.d" -MT"Src/buttons.o" -o "Src/buttons.o" "../Src/buttons.c"
In file included from /home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/ds3231_stm32_alex.h:8:0,
                 from /home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/render.h:12,
                 from ../Src/buttons.c:9:
/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/externs.h:15:8: error: unknown type name 'osSemaphoreId'
 extern osSemaphoreId set_blink_semaphoreHandle;
        ^~~~~~~~~~~~~
/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/externs.h:16:8: error: unknown type name 'TimerHandle_t'
 extern TimerHandle_t rtos_blink_timer;
        ^~~~~~~~~~~~~
../Src/buttons.c: In function 'ButtonListenerTask':
../Src/buttons.c:62:2: error: unknown type name 'TickType_t'
  TickType_t button_last_time[NUM_OF_BUTTONS] = {0};
  ^~~~~~~~~~
../Src/buttons.c:63:2: error: unknown type name 'TickType_t'
  TickType_t debounce_delay = pdMS_TO_TICKS(DEBOUNCE_DELAY);
  ^~~~~~~~~~
../Src/buttons.c:63:30: warning: implicit declaration of function 'pdMS_TO_TICKS' [-Wimplicit-function-declaration]
  TickType_t debounce_delay = pdMS_TO_TICKS(DEBOUNCE_DELAY);
                              ^~~~~~~~~~~~~
../Src/buttons.c:93:27: warning: implicit declaration of function 'xTaskGetTickCount' [-Wimplicit-function-declaration]
     button_last_time[i] = xTaskGetTickCount();
                           ^~~~~~~~~~~~~~~~~
../Src/buttons.c:146:10: warning: implicit declaration of function 'DS3231_get_alarm' [-Wimplicit-function-declaration]
          DS3231_get_alarm(&hi2c2, &set_alarm, ALARM_ONE);
          ^~~~~~~~~~~~~~~~
../Src/buttons.c:167:10: warning: implicit declaration of function 'DS3231_set_alarm' [-Wimplicit-function-declaration]
          DS3231_set_alarm(&hi2c2, &set_alarm, ALARM_ONE);
          ^~~~~~~~~~~~~~~~
In file included from /home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/render.h:11:0,
                 from ../Src/buttons.c:9:
../Src/buttons.c: At top level:
/home/alxhoff/git/Embedded/stm32_nixie_clock_firmware/Nixie_firnware/Inc/ssd1306.h:62:13: warning: 'ssd1306_WriteCommand' declared 'static' but never defined [-Wunused-function]
 static void ssd1306_WriteCommand(uint8_t command);
             ^~~~~~~~~~~~~~~~~~~~
make: *** [Src/buttons.o] Error 1
Src/subdir.mk:51: recipe for target 'Src/buttons.o' failed

17:56:59 Build Finished (took 404ms)

